# rag-doc-example

./: .env.example  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  README.md  pyproject.toml  valohai.yaml
.github/workflows/: lint.yml
src/rag_doctor/: __main__.py  consts.py  database.py  evaluate.py  interactive.py  query.py  server.py
